testdata/parser/ok/arrays/TPOK_ArrayLength.java
int main() {
		int[] a1;
		a1 = new int[10];
		a1[0] = 1;
		a1[1] = 1;
		a1[2] = 1;
		a1[3] = 1;
		a1[4] = 1;
		a1[5] = 1;
		a1[6] = 1;
		a1[7] = 1;
		a1[8] = 1;
		a1[9] = 1;
		printInt(42);
		printInt(a1.length);
		return 0;
}
